// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HowToUse snapshot matches the rendered markup (dark) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-xwg7pn"
  >
    <div
      class="MuiBox-root css-g0r5qj"
    >
      <div
        class="MuiBox-root css-3b2wtl"
      >
        <div
          class="MuiBox-root css-1lmbrpy"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1gwahj5-MuiSvgIcon-root"
            data-testid="MenuBookIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1m0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5z"
            />
            <path
              d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99M13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83m4.5 1.84c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24"
            />
          </svg>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1sipu51-MuiTypography-root"
        >
          How to Use DocuThinker
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-10f3n83-MuiTypography-root"
        >
          Your AI-powered document workspace — upload a PDF, Word, Markdown, or text file and summarize it, extract key ideas, chat with it, translate it, and more. Here's everything you can do.
        </p>
      </div>
      <div
        class="MuiBox-root css-1dky3lt"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-lzbpaq-MuiSvgIcon-root"
          data-testid="LockOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2M9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9zm9 14H6V10h12zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-t8p0az-MuiTypography-root"
        >
          <strong>
            You must be signed in
          </strong>
           to upload, summarize, and save documents. Create a free account on the 
          <a
            href="/register"
            style="color: rgb(245, 124, 0); font-weight: 600;"
          >
            Register
          </a>
           page or 
          <a
            href="/login"
            style="color: rgb(245, 124, 0); font-weight: 600;"
          >
            log in
          </a>
           to get started — your documents are then saved to your account.
        </p>
      </div>
      <div
        class="MuiBox-root css-1ablf4k"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="UploadFileIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              1
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Upload a document
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Drag & drop onto the upload box on the home page, pick a file from your device, or import from Google Drive. Supported: PDF, Word (.docx), Markdown, HTML, CSV/TSV, JSON, plain text, and code/config files — each is rendered in its best form (real PDF pages, formatted Word/Markdown, HTML, tables for CSV, monospace for code, or clean text).
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ArticleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-5 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              2
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              View the original + summary
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              After processing you'll see the original document rendered on the left (real PDF pages, formatted Word/Markdown, or clean text) and a concise AI summary on the right.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HighlightAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 5h-2V3h2zm-2 16h2v-2.59L19.59 21 21 19.59 18.41 17H21v-2h-6zm4-12h2V7h-2zm0 4h2v-2h-2zm-8 8h2v-2h-2zM7 5h2V3H7zM3 17h2v-2H3zm2 4v-2H3c0 1.1.9 2 2 2M19 3v2h2c0-1.1-.9-2-2-2m-8 2h2V3h-2zM3 9h2V7H3zm4 12h2v-2H7zm-4-8h2v-2H3zm0-8h2V3c-1.1 0-2 .9-2 2"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              3
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Highlight text for quick actions
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              On the results view, select any text to pop a menu: Copy, Summarize, Rewrite, Ask Chat, or Search the web — all scoped to exactly what you highlighted.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="TipsAndUpdatesIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 20h4c0 1.1-.9 2-2 2s-2-.9-2-2m-2-1h8v-2H5zm11.5-9.5c0 3.82-2.66 5.86-3.77 6.5H5.27c-1.11-.64-3.77-2.68-3.77-6.5C1.5 5.36 4.86 2 9 2s7.5 3.36 7.5 7.5m4.87-2.13L20 8l1.37.63L22 10l.63-1.37L24 8l-1.37-.63L22 6zM19 6l.94-2.06L22 3l-2.06-.94L19 0l-.94 2.06L16 3l2.06.94z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              4
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Generate key ideas
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Click 'Generate Key Ideas' to let the AI extract the most important points from the document.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ForumIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1m-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              5
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Generate discussion points
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Create discussion points for group discussions, debates, or deeper analysis of the document.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ChatIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2M6 9h12v2H6zm8 5H6v-2h8zm4-6H6V6h12z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              6
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Chat with the AI
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Ask specific questions and get answers grounded in your document's context — the AI also knows the document's title and today's date.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="FormatListBulletedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5m0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5m0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5M7 19h14v-2H7zm0-6h14v-2H7zm0-8v2h14V5z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              7
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Bullet-point summary
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Get a concise bulleted summary — handy for quick notes or study guides.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="TranslateIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12.87 15.07-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2zm-2.62 7 1.62-4.33L19.12 17z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              8
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Change the summary language
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Translate the summary into another language to share with multilingual readers.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="InsightsIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 8c-1.45 0-2.26 1.44-1.93 2.51l-3.55 3.56c-.3-.09-.74-.09-1.04 0l-2.55-2.55C12.27 10.45 11.46 9 10 9c-1.45 0-2.27 1.44-1.93 2.52l-4.56 4.55C2.44 15.74 1 16.55 1 18c0 1.1.9 2 2 2 1.45 0 2.26-1.44 1.93-2.51l4.55-4.56c.3.09.74.09 1.04 0l2.55 2.55C12.73 16.55 13.54 18 15 18c1.45 0 2.27-1.44 1.93-2.52l3.56-3.55c1.07.33 2.51-.48 2.51-1.93 0-1.1-.9-2-2-2"
              />
              <path
                d="m15 9 .94-2.07L18 6l-2.06-.93L15 3l-.92 2.07L12 6l2.08.93zM3.5 11 4 9l2-.5L4 8l-.5-2L3 8l-2 .5L3 9z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              9
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Sentiment analysis
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              See whether the document reads positive, negative, or neutral. Results are cached per document so revisiting won't re-run the analysis.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="RecommendIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2m6 9.8a.9.9 0 0 1-.1.5l-2.1 4.9a1.34 1.34 0 0 1-1.3.8H9a2 2 0 0 1-2-2v-5a1.28 1.28 0 0 1 .4-1L12 5l.69.69a1.08 1.08 0 0 1 .3.7v.2L12.41 10H17a1 1 0 0 1 1 1z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              10
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Actionable recommendations
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Get suggested next steps, improvements, or decisions based on the document content.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="AutoFixHighIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.5 5.6 10 7 8.6 4.5 10 2 7.5 3.4 5 2l1.4 2.5L5 7zm12 9.8L17 14l1.4 2.5L17 19l2.5-1.4L22 19l-1.4-2.5L22 14zM22 2l-2.5 1.4L17 2l1.4 2.5L17 7l2.5-1.4L22 7l-1.4-2.5zm-7.63 5.29a.996.996 0 0 0-1.41 0L1.29 18.96c-.39.39-.39 1.02 0 1.41l2.34 2.34c.39.39 1.02.39 1.41 0L16.7 11.05c.39-.39.39-1.02 0-1.41zm-1.03 5.49-2.12-2.12 2.44-2.44 2.12 2.12z"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              11
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Rewrite content
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Specify a tone or style and the AI rewrites the text — or highlight a passage and rewrite just that part.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="RecordVoiceOverIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <circle
                cx="9"
                cy="9"
                r="4"
              />
              <path
                d="M9 15c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4m7.76-9.64-1.68 1.69c.84 1.18.84 2.71 0 3.89l1.68 1.69c2.02-2.02 2.02-5.07 0-7.27M20.07 2l-1.63 1.63c2.77 3.02 2.77 7.56 0 10.74L20.07 16c3.9-3.89 3.91-9.95 0-14"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              12
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Voice chat
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Talk to the AI: upload a document, hit 'Voice Chat', and ask questions or discuss the content by voice.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="SearchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              13
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Search your documents
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              On the Documents page, search by title or summary and sort/filter (newest, oldest, A–Z, by file type) to find anything fast.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ManageAccountsIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <circle
                cx="10"
                cy="8"
                r="4"
              />
              <path
                d="M10.67 13.02c-.22-.01-.44-.02-.67-.02-2.42 0-4.68.67-6.61 1.82-.88.52-1.39 1.5-1.39 2.53V20h9.26c-.79-1.13-1.26-2.51-1.26-4 0-1.07.25-2.07.67-2.98M20.75 16c0-.22-.03-.42-.06-.63l1.14-1.01-1-1.73-1.45.49q-.48-.405-1.08-.63L18 11h-2l-.3 1.49q-.6.225-1.08.63l-1.45-.49-1 1.73 1.14 1.01c-.03.21-.06.41-.06.63s.03.42.06.63l-1.14 1.01 1 1.73 1.45-.49q.48.405 1.08.63L16 21h2l.3-1.49q.6-.225 1.08-.63l1.45.49 1-1.73-1.14-1.01c.03-.21.06-.41.06-.63M17 18c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              14
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Manage documents & profile
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              View, re-open, rename, or delete saved documents, and update your email, social links, and avatar from the Profile page.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="PersonAddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m-9-2V7H4v3H1v2h3v3h2v-3h3v-2zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              15
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Create an account to save work
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Register and sign in to store your analyzed documents, re-open them anytime with the original file, and get a higher upload limit.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-onsqr9-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-1jgwuxq"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="FingerprintIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.81 4.47c-.08 0-.16-.02-.23-.06C15.66 3.42 14 3 12.01 3c-1.98 0-3.86.47-5.57 1.41-.24.13-.54.04-.68-.2-.13-.24-.04-.55.2-.68C7.82 2.52 9.86 2 12.01 2c2.13 0 3.99.47 6.03 1.52.25.13.34.43.21.67-.09.18-.26.28-.44.28M3.5 9.72c-.1 0-.2-.03-.29-.09-.23-.16-.28-.47-.12-.7.99-1.4 2.25-2.5 3.75-3.27C9.98 4.04 14 4.03 17.15 5.65c1.5.77 2.76 1.86 3.75 3.25.16.22.11.54-.12.7s-.54.11-.7-.12c-.9-1.26-2.04-2.25-3.39-2.94-2.87-1.47-6.54-1.47-9.4.01-1.36.7-2.5 1.7-3.4 2.96-.08.14-.23.21-.39.21m6.25 12.07c-.13 0-.26-.05-.35-.15-.87-.87-1.34-1.43-2.01-2.64-.69-1.23-1.05-2.73-1.05-4.34 0-2.97 2.54-5.39 5.66-5.39s5.66 2.42 5.66 5.39c0 .28-.22.5-.5.5s-.5-.22-.5-.5c0-2.42-2.09-4.39-4.66-4.39s-4.66 1.97-4.66 4.39c0 1.44.32 2.77.93 3.85.64 1.15 1.08 1.64 1.85 2.42.19.2.19.51 0 .71-.11.1-.24.15-.37.15m7.17-1.85c-1.19 0-2.24-.3-3.1-.89-1.49-1.01-2.38-2.65-2.38-4.39 0-.28.22-.5.5-.5s.5.22.5.5c0 1.41.72 2.74 1.94 3.56.71.48 1.54.71 2.54.71.24 0 .64-.03 1.04-.1.27-.05.53.13.58.41.05.27-.13.53-.41.58-.57.11-1.07.12-1.21.12M14.91 22c-.04 0-.09-.01-.13-.02-1.59-.44-2.63-1.03-3.72-2.1-1.4-1.39-2.17-3.24-2.17-5.22 0-1.62 1.38-2.94 3.08-2.94s3.08 1.32 3.08 2.94c0 1.07.93 1.94 2.08 1.94s2.08-.87 2.08-1.94c0-3.77-3.25-6.83-7.25-6.83-2.84 0-5.44 1.58-6.61 4.03-.39.81-.59 1.76-.59 2.8 0 .78.07 2.01.67 3.61.1.26-.03.55-.29.64-.26.1-.55-.04-.64-.29-.49-1.31-.73-2.61-.73-3.96 0-1.2.23-2.29.68-3.24 1.33-2.79 4.28-4.6 7.51-4.6 4.55 0 8.25 3.51 8.25 7.83 0 1.62-1.38 2.94-3.08 2.94s-3.08-1.32-3.08-2.94c0-1.07-.93-1.94-2.08-1.94s-2.08.87-2.08 1.94c0 1.71.66 3.31 1.87 4.51.95.94 1.86 1.46 3.27 1.85.27.07.42.35.35.61-.05.23-.26.38-.47.38"
              />
            </svg>
            <div
              class="MuiBox-root css-17qg6fw"
            >
              16
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-2dtstb-MuiTypography-root"
            >
              Sign in with passkeys
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pqivi2-MuiTypography-root"
            >
              Skip passwords — add a passkey and sign in with your fingerprint, face, or device PIN from the Passkeys page.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-c06m7y-MuiPaper-root"
        style="--Paper-shadow: none;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-qtljvm-MuiTypography-root"
        >
          Supported document formats
        </p>
        <div
          class="MuiBox-root css-zefc5s"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              PDF
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Word (.docx)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Markdown (.md)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              HTML (.html)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              CSV / TSV
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              JSON
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Plain text (.txt)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1p30if2-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Code & config files
            </span>
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1na98j4-MuiTypography-root"
        >
          Make sure your document is one of these formats before uploading to guarantee smooth processing.
        </p>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1iq19tn-MuiTypography-root"
      >
        Made with ❤️ by 
        <a
          href="https://sonnguyenhoang.com"
          style="color: rgb(245, 124, 0);"
        >
          Son Nguyen
        </a>
        . Thank you for using DocuThinker! 🚀
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HowToUse snapshot matches the rendered markup (light) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-11lk1l9"
  >
    <div
      class="MuiBox-root css-g0r5qj"
    >
      <div
        class="MuiBox-root css-3b2wtl"
      >
        <div
          class="MuiBox-root css-1v5np52"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1gwahj5-MuiSvgIcon-root"
            data-testid="MenuBookIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1m0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5z"
            />
            <path
              d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99M13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83m4.5 1.84c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24"
            />
          </svg>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1sipu51-MuiTypography-root"
        >
          How to Use DocuThinker
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-i0o4ns-MuiTypography-root"
        >
          Your AI-powered document workspace — upload a PDF, Word, Markdown, or text file and summarize it, extract key ideas, chat with it, translate it, and more. Here's everything you can do.
        </p>
      </div>
      <div
        class="MuiBox-root css-1t7enqt"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-lzbpaq-MuiSvgIcon-root"
          data-testid="LockOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2M9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9zm9 14H6V10h12zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-62giny-MuiTypography-root"
        >
          <strong>
            You must be signed in
          </strong>
           to upload, summarize, and save documents. Create a free account on the 
          <a
            href="/register"
            style="color: rgb(245, 124, 0); font-weight: 600;"
          >
            Register
          </a>
           page or 
          <a
            href="/login"
            style="color: rgb(245, 124, 0); font-weight: 600;"
          >
            log in
          </a>
           to get started — your documents are then saved to your account.
        </p>
      </div>
      <div
        class="MuiBox-root css-1ablf4k"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="UploadFileIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              1
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Upload a document
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Drag & drop onto the upload box on the home page, pick a file from your device, or import from Google Drive. Supported: PDF, Word (.docx), Markdown, HTML, CSV/TSV, JSON, plain text, and code/config files — each is rendered in its best form (real PDF pages, formatted Word/Markdown, HTML, tables for CSV, monospace for code, or clean text).
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ArticleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-5 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              2
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              View the original + summary
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              After processing you'll see the original document rendered on the left (real PDF pages, formatted Word/Markdown, or clean text) and a concise AI summary on the right.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="HighlightAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 5h-2V3h2zm-2 16h2v-2.59L19.59 21 21 19.59 18.41 17H21v-2h-6zm4-12h2V7h-2zm0 4h2v-2h-2zm-8 8h2v-2h-2zM7 5h2V3H7zM3 17h2v-2H3zm2 4v-2H3c0 1.1.9 2 2 2M19 3v2h2c0-1.1-.9-2-2-2m-8 2h2V3h-2zM3 9h2V7H3zm4 12h2v-2H7zm-4-8h2v-2H3zm0-8h2V3c-1.1 0-2 .9-2 2"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              3
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Highlight text for quick actions
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              On the results view, select any text to pop a menu: Copy, Summarize, Rewrite, Ask Chat, or Search the web — all scoped to exactly what you highlighted.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="TipsAndUpdatesIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 20h4c0 1.1-.9 2-2 2s-2-.9-2-2m-2-1h8v-2H5zm11.5-9.5c0 3.82-2.66 5.86-3.77 6.5H5.27c-1.11-.64-3.77-2.68-3.77-6.5C1.5 5.36 4.86 2 9 2s7.5 3.36 7.5 7.5m4.87-2.13L20 8l1.37.63L22 10l.63-1.37L24 8l-1.37-.63L22 6zM19 6l.94-2.06L22 3l-2.06-.94L19 0l-.94 2.06L16 3l2.06.94z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              4
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Generate key ideas
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Click 'Generate Key Ideas' to let the AI extract the most important points from the document.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ForumIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1m-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              5
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Generate discussion points
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Create discussion points for group discussions, debates, or deeper analysis of the document.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ChatIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2M6 9h12v2H6zm8 5H6v-2h8zm4-6H6V6h12z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              6
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Chat with the AI
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Ask specific questions and get answers grounded in your document's context — the AI also knows the document's title and today's date.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="FormatListBulletedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5m0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5m0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5M7 19h14v-2H7zm0-6h14v-2H7zm0-8v2h14V5z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              7
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Bullet-point summary
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Get a concise bulleted summary — handy for quick notes or study guides.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="TranslateIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12.87 15.07-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2zm-2.62 7 1.62-4.33L19.12 17z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              8
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Change the summary language
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Translate the summary into another language to share with multilingual readers.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="InsightsIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 8c-1.45 0-2.26 1.44-1.93 2.51l-3.55 3.56c-.3-.09-.74-.09-1.04 0l-2.55-2.55C12.27 10.45 11.46 9 10 9c-1.45 0-2.27 1.44-1.93 2.52l-4.56 4.55C2.44 15.74 1 16.55 1 18c0 1.1.9 2 2 2 1.45 0 2.26-1.44 1.93-2.51l4.55-4.56c.3.09.74.09 1.04 0l2.55 2.55C12.73 16.55 13.54 18 15 18c1.45 0 2.27-1.44 1.93-2.52l3.56-3.55c1.07.33 2.51-.48 2.51-1.93 0-1.1-.9-2-2-2"
              />
              <path
                d="m15 9 .94-2.07L18 6l-2.06-.93L15 3l-.92 2.07L12 6l2.08.93zM3.5 11 4 9l2-.5L4 8l-.5-2L3 8l-2 .5L3 9z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              9
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Sentiment analysis
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              See whether the document reads positive, negative, or neutral. Results are cached per document so revisiting won't re-run the analysis.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="RecommendIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2m6 9.8a.9.9 0 0 1-.1.5l-2.1 4.9a1.34 1.34 0 0 1-1.3.8H9a2 2 0 0 1-2-2v-5a1.28 1.28 0 0 1 .4-1L12 5l.69.69a1.08 1.08 0 0 1 .3.7v.2L12.41 10H17a1 1 0 0 1 1 1z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              10
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Actionable recommendations
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Get suggested next steps, improvements, or decisions based on the document content.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="AutoFixHighIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.5 5.6 10 7 8.6 4.5 10 2 7.5 3.4 5 2l1.4 2.5L5 7zm12 9.8L17 14l1.4 2.5L17 19l2.5-1.4L22 19l-1.4-2.5L22 14zM22 2l-2.5 1.4L17 2l1.4 2.5L17 7l2.5-1.4L22 7l-1.4-2.5zm-7.63 5.29a.996.996 0 0 0-1.41 0L1.29 18.96c-.39.39-.39 1.02 0 1.41l2.34 2.34c.39.39 1.02.39 1.41 0L16.7 11.05c.39-.39.39-1.02 0-1.41zm-1.03 5.49-2.12-2.12 2.44-2.44 2.12 2.12z"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              11
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Rewrite content
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Specify a tone or style and the AI rewrites the text — or highlight a passage and rewrite just that part.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="RecordVoiceOverIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <circle
                cx="9"
                cy="9"
                r="4"
              />
              <path
                d="M9 15c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4m7.76-9.64-1.68 1.69c.84 1.18.84 2.71 0 3.89l1.68 1.69c2.02-2.02 2.02-5.07 0-7.27M20.07 2l-1.63 1.63c2.77 3.02 2.77 7.56 0 10.74L20.07 16c3.9-3.89 3.91-9.95 0-14"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              12
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Voice chat
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Talk to the AI: upload a document, hit 'Voice Chat', and ask questions or discuss the content by voice.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="SearchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              13
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Search your documents
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              On the Documents page, search by title or summary and sort/filter (newest, oldest, A–Z, by file type) to find anything fast.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ManageAccountsIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <circle
                cx="10"
                cy="8"
                r="4"
              />
              <path
                d="M10.67 13.02c-.22-.01-.44-.02-.67-.02-2.42 0-4.68.67-6.61 1.82-.88.52-1.39 1.5-1.39 2.53V20h9.26c-.79-1.13-1.26-2.51-1.26-4 0-1.07.25-2.07.67-2.98M20.75 16c0-.22-.03-.42-.06-.63l1.14-1.01-1-1.73-1.45.49q-.48-.405-1.08-.63L18 11h-2l-.3 1.49q-.6.225-1.08.63l-1.45-.49-1 1.73 1.14 1.01c-.03.21-.06.41-.06.63s.03.42.06.63l-1.14 1.01 1 1.73 1.45-.49q.48.405 1.08.63L16 21h2l.3-1.49q.6-.225 1.08-.63l1.45.49 1-1.73-1.14-1.01c.03-.21.06-.41.06-.63M17 18c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              14
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Manage documents & profile
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              View, re-open, rename, or delete saved documents, and update your email, social links, and avatar from the Profile page.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="PersonAddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m-9-2V7H4v3H1v2h3v3h2v-3h3v-2zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              15
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Create an account to save work
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Register and sign in to store your analyzed documents, re-open them anytime with the original file, and get a higher upload limit.
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-15dutw8-MuiPaper-root"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiBox-root css-f7myr6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="FingerprintIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.81 4.47c-.08 0-.16-.02-.23-.06C15.66 3.42 14 3 12.01 3c-1.98 0-3.86.47-5.57 1.41-.24.13-.54.04-.68-.2-.13-.24-.04-.55.2-.68C7.82 2.52 9.86 2 12.01 2c2.13 0 3.99.47 6.03 1.52.25.13.34.43.21.67-.09.18-.26.28-.44.28M3.5 9.72c-.1 0-.2-.03-.29-.09-.23-.16-.28-.47-.12-.7.99-1.4 2.25-2.5 3.75-3.27C9.98 4.04 14 4.03 17.15 5.65c1.5.77 2.76 1.86 3.75 3.25.16.22.11.54-.12.7s-.54.11-.7-.12c-.9-1.26-2.04-2.25-3.39-2.94-2.87-1.47-6.54-1.47-9.4.01-1.36.7-2.5 1.7-3.4 2.96-.08.14-.23.21-.39.21m6.25 12.07c-.13 0-.26-.05-.35-.15-.87-.87-1.34-1.43-2.01-2.64-.69-1.23-1.05-2.73-1.05-4.34 0-2.97 2.54-5.39 5.66-5.39s5.66 2.42 5.66 5.39c0 .28-.22.5-.5.5s-.5-.22-.5-.5c0-2.42-2.09-4.39-4.66-4.39s-4.66 1.97-4.66 4.39c0 1.44.32 2.77.93 3.85.64 1.15 1.08 1.64 1.85 2.42.19.2.19.51 0 .71-.11.1-.24.15-.37.15m7.17-1.85c-1.19 0-2.24-.3-3.1-.89-1.49-1.01-2.38-2.65-2.38-4.39 0-.28.22-.5.5-.5s.5.22.5.5c0 1.41.72 2.74 1.94 3.56.71.48 1.54.71 2.54.71.24 0 .64-.03 1.04-.1.27-.05.53.13.58.41.05.27-.13.53-.41.58-.57.11-1.07.12-1.21.12M14.91 22c-.04 0-.09-.01-.13-.02-1.59-.44-2.63-1.03-3.72-2.1-1.4-1.39-2.17-3.24-2.17-5.22 0-1.62 1.38-2.94 3.08-2.94s3.08 1.32 3.08 2.94c0 1.07.93 1.94 2.08 1.94s2.08-.87 2.08-1.94c0-3.77-3.25-6.83-7.25-6.83-2.84 0-5.44 1.58-6.61 4.03-.39.81-.59 1.76-.59 2.8 0 .78.07 2.01.67 3.61.1.26-.03.55-.29.64-.26.1-.55-.04-.64-.29-.49-1.31-.73-2.61-.73-3.96 0-1.2.23-2.29.68-3.24 1.33-2.79 4.28-4.6 7.51-4.6 4.55 0 8.25 3.51 8.25 7.83 0 1.62-1.38 2.94-3.08 2.94s-3.08-1.32-3.08-2.94c0-1.07-.93-1.94-2.08-1.94s-2.08.87-2.08 1.94c0 1.71.66 3.31 1.87 4.51.95.94 1.86 1.46 3.27 1.85.27.07.42.35.35.61-.05.23-.26.38-.47.38"
              />
            </svg>
            <div
              class="MuiBox-root css-umost9"
            >
              16
            </div>
          </div>
          <div
            class="MuiBox-root css-31l7gp"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1mzsr08-MuiTypography-root"
            >
              Sign in with passkeys
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-43p0fg-MuiTypography-root"
            >
              Skip passwords — add a passkey and sign in with your fingerprint, face, or device PIN from the Passkeys page.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1u2qwx6-MuiPaper-root"
        style="--Paper-shadow: none;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-15njx21-MuiTypography-root"
        >
          Supported document formats
        </p>
        <div
          class="MuiBox-root css-zefc5s"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              PDF
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Word (.docx)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Markdown (.md)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              HTML (.html)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              CSV / TSV
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              JSON
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Plain text (.txt)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1o26rqg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
            >
              Code & config files
            </span>
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-v9dyhz-MuiTypography-root"
        >
          Make sure your document is one of these formats before uploading to guarantee smooth processing.
        </p>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1vlfak2-MuiTypography-root"
      >
        Made with ❤️ by 
        <a
          href="https://sonnguyenhoang.com"
          style="color: rgb(245, 124, 0);"
        >
          Son Nguyen
        </a>
        . Thank you for using DocuThinker! 🚀
      </p>
    </div>
  </div>
</DocumentFragment>
`;
